--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,3 +45,13 @@ header h1 {
 	align-items: center;
 	padding: 0.7rem 1.3%;
 }
+
+/* Start */
+#start {
+
+}
+
+#start img {
+	width: 50%;
+	height: auto;
+}
