--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -72,8 +72,9 @@ header h1 {
 #start a.button {
 	background-color: aliceblue;
 	font-size: 1rem; 
-	padding: 0.5rem 5%;
+	padding: 0.8rem 3%;
 	text-align: center;
+	width: 82%;
 }
 
 #start h2 {
